其他页面细节

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</li>
 								<li ui-sref-active="active">
 									<a ui-sref="app.admin"><i class="icon-list-unordered"></i> 
-									<span>普通管理员 <span class="label bg-blue-400">12</span></span></a>
+									<span>管理员管理</span></a>
 								</li>
 								<!-- <li ui-sref-active="active">
 									<a ui-sref="app.superadmin"><i class="icon-width"></i> <span>超级管理员</span></a>
@@ -109,7 +109,7 @@
 								<li ui-sref-active="active"><a href=""><i class="icon-sphere"></i> <span>节目管理</span></a></li>
 
 								<li ui-sref-active="active" class="has-sub">
-									<a href="#"><i class="icon-tv"></i> <span>终端管理</span></a>
+									<a href=""><i class="icon-tv"></i> <span>终端管理</span></a>
 									<ul ui-sref-active="show">
 										<li><a href="">终端信息管理</a></li>
 										<li><a href="">终端播放计划</a></li>
@@ -117,7 +117,7 @@
 								</li>
 								
 								<li><a href=""><i class="icon-popout"></i> <span>场景管理</span></a></li>
-								<li>
+								<li ui-sref-active="active">
 									<a ui-sref="app.plan"><i class="icon-puzzle4"></i> <span>套餐管理</span></a>
 								</li>
 								<li ui-sref-active="active">
@@ -125,9 +125,11 @@
 									<i class="icon-stats-bars"></i> <span>订单管理</span></a>
 								</li>
 								<li ui-sref-active="active">
-									<a ui-sref="app.log"><i class="icon-stats-dots"></i> <span>财务记录</span></a>
+									<a ui-sref="app.finance"><i class="icon-stats-dots"></i> <span>财务记录</span></a>
 								</li>
-								<li><a ui-sref="app.logs"><i class="icon-statistics"></i> <span>日志记录</span></a></li>
+								<li ui-sref-active="active">
+									<a ui-sref="app.logs"><i class="icon-statistics"></i> <span>日志记录</span></a>
+								</li>
 								<!-- /Main -->
 							</ul>
 						</div>
