--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 								</li>
 								<li ui-sref-active="active"><a href=""><i class="icon-sphere"></i> <span>节目管理</span></a></li>
 
-								<li ui-sref-active="active" class="has-sub">
+								<li class="has-sub" ui-sub-nav="app.devices">
 									<a href=""><i class="icon-tv"></i> <span>终端管理</span></a>
-									<ul ui-sref-active="show">
-										<li><a href="">终端信息管理</a></li>
+									<ul>
+										<li ui-sref-active="active"><a ui-sref="app.devices.index">终端信息管理</a></li>
 										<li><a href="">终端播放计划</a></li>
 									</ul>
 								</li>
@@ -162,6 +162,7 @@
 	<!-- app js -->
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/controllers.js"></script>
+	<script type="text/javascript" src="app/directives.js"></script>
 
 	<!-- /app js -->
 </body>
