--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 								<li ui-sref-active="active">
 									<a ui-sref="app.logs"><i class="icon-statistics"></i> <span>日志记录</span></a>
 								</li>
+								<li ui-sref-active="active">
+									<a ui-sref="app.live"><i class="icon-tv"></i> <span>直播节目</span></a>
+								</li>
 								<!-- /Main -->
 							</ul>
 						</div>
