修改导航顺序

--- a/index.html
+++ b/index.html
@@ -105,11 +105,15 @@
 									<a ui-sref="app.superadmin"><i class="icon-width"></i> <span>超级管理员</span></a>
 								</li> -->
 								<li ui-sref-active="active">
-									<a ui-sref="app.customer"><i class="icon-table2"></i> <span>广告主管理</span></a>
+									<a ui-sref="app.customer"><i class="icon-table2"></i> <span>广告商管理</span></a>
+								</li>
+								<li ui-sref-active="active">
+									<a ui-sref="app.files"><i class="icon-sphere"></i> <span>素材管理</span></a>
 								</li>
 								<li ui-sref-active="active">
 									<a ui-sref="app.files"><i class="icon-sphere"></i> <span>节目管理</span></a>
 								</li>
+								<li><a ui-sref="app.scenes"><i class="icon-popout"></i> <span>场景管理</span></a></li>
 								<li class="has-sub" ui-sub-nav="app.devices">
 									<a href=""><i class="icon-tv"></i> <span>终端管理</span></a>
 									<ul>
@@ -117,8 +121,6 @@
 										<li><a href="">终端播放计划</a></li>
 									</ul>
 								</li>
-								
-								<li><a ui-sref="app.scenes"><i class="icon-popout"></i> <span>场景管理</span></a></li>
 								<li ui-sref-active="active">
 									<a ui-sref="app.plan"><i class="icon-puzzle4"></i> <span>套餐管理</span></a>
 								</li>
