--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<a ui-sref="app.files"><i class="icon-sphere"></i> <span>素材管理</span></a>
 								</li>
 								<li ui-sref-active="active">
-									<a ui-sref="app.files"><i class="icon-sphere"></i> <span>节目管理</span></a>
+									<a ui-sref="app.shows"><i class="icon-sphere"></i> <span>节目管理</span></a>
 								</li>
 								<li><a ui-sref="app.scenes"><i class="icon-popout"></i> <span>场景管理</span></a></li>
 								<li class="has-sub" ui-sub-nav="app.devices">
