节目推送页面

--- a/index.html
+++ b/index.html
@@ -108,9 +108,6 @@
 									<a ui-sref="app.customer"><i class="icon-table2"></i> <span>广告商管理</span></a>
 								</li>
 								<li ui-sref-active="active">
-									<a ui-sref="app.files"><i class="icon-sphere"></i> <span>素材管理</span></a>
-								</li>
-								<li ui-sref-active="active">
 									<a ui-sref="app.shows"><i class="icon-sphere"></i> <span>节目管理</span></a>
 								</li>
 								<li><a ui-sref="app.scenes"><i class="icon-popout"></i> <span>场景管理</span></a></li>
@@ -118,7 +115,7 @@
 									<a href=""><i class="icon-tv"></i> <span>终端管理</span></a>
 									<ul>
 										<li ui-sref-active="active"><a ui-sref="app.devices.index">终端信息管理</a></li>
-										<li><a href="">终端播放计划</a></li>
+										<li ui-sref-active="active"><a ui-sref="app.devices.playlist">终端播放计划</a></li>
 									</ul>
 								</li>
 								<li ui-sref-active="active">
